kubernetes/namespaces/base/jellyfin/jellyfin/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        openebs.io/engine: mayastor
      volumes:
        - name: config-jellyfin
          persistentVolumeClaim:
            claimName: config-jellyfin
        - name: data-jellyfin
          persistentVolumeClaim:
            claimName: data-jellyfin
      containers:
        - env:
            - name: PGID
              value: "\x36\x35\x35\x34\x31" # < ASCII code for '65541'
            - name: PUID
              value: "\x31\x30\x34\x34" #< ACII code for '1044'
            - name: TZ
              value: Europe/London
          securityContext:
            privileged: true # Container must run as privileged inside of the pod, required for hardware acceleration
          image: ghcr.io/linuxserver/jellyfin@sha256:367630b4e4e643c3c1d00bb76f13f3dbe318ad817c01256c358316c7acc3919b
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
            - containerPort: 1900
              name: dlna
              protocol: UDP
            - containerPort: 7359
              name: discovery
              protocol: UDP      
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: config-jellyfin
            - mountPath: /data
              name: data-jellyfin
      dnsPolicy: ClusterFirst
      restartPolicy: Always
