kubernetes/namespaces/base/jellyfin/jellyfin/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-discovery       # < name of the service
  namespace: jellyfin      # < namespace where to place service
spec:
  selector:
    app: jellyfin          # < reference to the deployment (connects the service with the deployment)
  ports:
    - port: 1900             # < port to open on the outside on the server
      targetPort: 1900       # < targetport. port on the pod to passthrough
      name: dlna         # < reference name for the port in the deployment yaml
      protocol: UDP
    - port: 7359
      targetPort: 7359
      name: discovery
      protocol: UDP
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-web       # < name of the service
  namespace: jellyfin
spec:
  selector:
    app: jellyfin          # < reference to the deployment (connects the service with the deployment)
  ports:
    - port: 8096             # < port to open on the outside on the server
      targetPort: 8096       # < targetport. port on the pod to passthrough
      name: http         # < reference name for the port in the deployment yaml
      protocol: TCP
  type: ClusterIP
