kubernetes/namespaces/base/jellyfin/jellyfin/app/ingressroute-jellyfin.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.x.arita.moe`)
      kind: Rule
      services:
        - name: jellyfin-web
          port: 8096
